fix: [IDP-239] Review comments
