# idp-service/contracts/openapi/v1/openapi.yaml
@@ -461,100 +461,81 @@ paths:
         - $ref: '#/components/parameters/AccountHeader'
       tags:
         - LayoutProxy
-  /v1/app-config:
-    get:
-      summary: Your GET endpoint
-      tags:
-        - appconfig
-      responses:
-        '200':
-          $ref: '#/components/responses/AppConfigResponse'
-      operationId: getPluginAppConfig
-      parameters:
-        - schema:
-            type: string
-          in: query
-          name: pluginName
-          description: plugin name for filtering
-        - schema:
-            type: string
-          in: header
-          name: Harness-Account
-          description: 'Identifier field of the account the resource is scoped to. This is required for Authorization methods other than the x-api-key header. If you are using the x-api-key header, this can be skipped.'
-    post:
-      summary: ''
-      operationId: insertPluginAppConfig
-      responses:
-        '200':
-          $ref: '#/components/responses/AppConfigResponse'
-      security:
-        - x-api-key: []
-      parameters:
-        - schema:
-            type: string
-          in: header
-          name: Harness-Account
-          description: 'Identifier field of the account the resource is scoped to. This is required for Authorization methods other than the x-api-key header. If you are using the x-api-key header, this can be skipped.'
-      requestBody:
-        $ref: '#/components/requestBodies/AppConfigRequest'
-      tags:
-        - appconfig
-      x-internal: true
-    parameters: []
-    put:
-      summary: ''
-      operationId: updatePluginConfigs
-      responses:
-        '200':
-          $ref: '#/components/responses/AppConfigResponse'
-      parameters:
-        - schema:
-            type: string
-          in: header
-          name: Harness-Account
-          description: 'Identifier field of the account the resource is scoped to. This is required for Authorization methods other than the x-api-key header. If you are using the x-api-key header, this can be skipped.'
-      security:
-        - x-api-key: []
-      requestBody:
-        $ref: '#/components/requestBodies/AppConfigRequest'
-      tags:
-        - appconfig
-      x-internal: true
   /v1/plugin-toggle:
     post:
       summary: ''
-      operationId: togglePlginForAccount
+      operationId: toggle-plugin-for-account
       responses:
         '200':
           $ref: '#/components/responses/AppConfigResponse'
-        '201':
-          description: Created
-          content:
-            application/json:
-              schema:
-                type: object
-                properties: {}
       parameters:
         - schema:
             type: string
           in: header
           name: Harness-Account
           description: 'Identifier field of the account the resource is scoped to. This is required for Authorization methods other than the x-api-key header. If you are using the x-api-key header, this can be skipped.'
-        - schema:
-            type: string
-          in: query
-          name: pluginName
-          description: plugin name for disabling for account
-        - schema:
-            type: boolean
-          in: query
-          name: isEnabled
-          description: flag for making the plugin disabled
+        - $ref: '#/components/parameters/PluginName'
+        - $ref: '#/components/parameters/Enabled'
       security:
         - x-api-key: []
       tags:
-        - appconfig
+        - AppConfig
     parameters: []
+  /v1/app-config:
+    get:
+      summary: Your GET endpoint
+      responses:
+        '200':
+          $ref: '#/components/responses/AppConfigResponse'
+      operationId: get-plugin-app-Config
+      parameters:
+        - schema:
+            type: string
+          in: header
+          name: Harness-Account
+          description: 'Identifier field of the account the resource is scoped to. This is required for Authorization methods other than the x-api-key header. If you are using the x-api-key header, this can be skipped.'
+        - $ref: '#/components/parameters/PluginName'
+      tags:
+        - AppConfig
+    post:
+      summary: ''
+      operationId: insert-plugin-app-config
+      responses:
+        '200':
+          $ref: '#/components/responses/AppConfigResponse'
+      security:
+        - x-api-key: []
+      parameters:
+        - schema:
+            type: string
+          in: header
+          name: Harness-Account
+          description: 'Identifier field of the account the resource is scoped to. This is required for Authorization methods other than the x-api-key header. If you are using the x-api-key header, this can be skipped.'
+      requestBody:
+        $ref: '#/components/requestBodies/AppConfigRequest'
+      x-internal: true
+      tags:
+        - AppConfig
+    parameters: []
+    put:
+      summary: ''
+      operationId: update-plugin-configs
+      responses:
+        '200':
+          $ref: '#/components/responses/AppConfigResponse'
+      parameters:
+        - schema:
+            type: string
+          in: header
+          name: Harness-Account
+          description: 'Identifier field of the account the resource is scoped to. This is required for Authorization methods other than the x-api-key header. If you are using the x-api-key header, this can be skipped.'
+      security:
+        - x-api-key: []
+      requestBody:
+        $ref: '#/components/requestBodies/AppConfigRequest'
+      x-internal: true
+      tags:
+        - AppConfig
 components:
   schemas:
     EnvironmentSecret:
@@ -896,7 +877,7 @@ components:
           updated: -9223372036854776000
           accountIdentifier: string
       properties:
-        pluginName:
+        pluginId:
           type: string
           x-stoplight:
             id: 4c46nx9p25z4g
@@ -904,7 +885,7 @@ components:
           type: string
           x-stoplight:
             id: c376cmcok0i1w
-        isEnabled:
+        enabled:
           type: boolean
           x-stoplight:
             id: 5k0msvhe7qhhd
@@ -1016,6 +997,20 @@ components:
       schema:
         type: string
       description: Layout Identifier
+    PluginName:
+      name: PluginId
+      in: query
+      required: false
+      schema:
+        type: string
+      description: 'Plugin name for filtering '
+    Enabled:
+      name: Enabled
+      in: query
+      required: false
+      schema:
+        type: boolean
+      description: flag for checking enablement/disablement
   requestBodies:
     EnvironmentSecretRequest:
       content:
@@ -1200,9 +1195,7 @@ components:
       type: apiKey
       in: header
 tags:
-  - name: EnvironmentSecret
-    description: Mapping of Environment Variables to Secrets
+  - name: AppConfig
   - name: BackstagePermissions
-    description: Backstage Permissions
+  - name: EnvironmentSecret
   - name: LayoutProxy
-    description: Layout Proxy
