# idp-service/src/main/java/io/harness/idp/configmanager/resource/AppConfigApiImpl.java
@@ -10,7 +10,7 @@ import static java.lang.String.format;
 
 import io.harness.eraro.ResponseMessage;
 import io.harness.idp.configmanager.service.ConfigManagerService;
-import io.harness.spec.server.idp.v1.AppconfigApi;
+import io.harness.spec.server.idp.v1.AppConfigApi;
 import io.harness.spec.server.idp.v1.model.AppConfig;
 import io.harness.spec.server.idp.v1.model.AppConfigRequest;
 
@@ -18,21 +18,24 @@ import javax.validation.Valid;
 import javax.ws.rs.core.Response;
 import lombok.AccessLevel;
 import lombok.AllArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.dao.DuplicateKeyException;
 
 @AllArgsConstructor(access = AccessLevel.PRIVATE, onConstructor = @__({ @com.google.inject.Inject }))
-public class AppConfigApiImpl implements AppconfigApi {
+@Slf4j
+public class AppConfigApiImpl implements AppConfigApi {
   private ConfigManagerService configManagerService;
 
-  private static String PLUGIN_CONFIG_ALREADY_PRESENT =
+  private static final String PLUGIN_CONFIG_ALREADY_PRESENT =
       "Plugin config for plugin - %s is already present for account - %s";
 
   @Override
-  public Response getPluginAppConfig(String pluginName, String harnessAccount) {
+  public Response getPluginAppConfig(String harnessAccount, String pluginId) {
     try {
-      AppConfig appConfig = configManagerService.getPluginConfig(harnessAccount, pluginName);
+      AppConfig appConfig = configManagerService.getPluginConfig(harnessAccount, pluginId);
       return Response.status(Response.Status.OK).entity(appConfig).build();
     } catch (Exception e) {
+      log.error(e.getMessage());
       return Response.status(Response.Status.INTERNAL_SERVER_ERROR)
           .entity(ResponseMessage.builder().message(e.getMessage()).build())
           .build();
@@ -45,11 +48,12 @@ public class AppConfigApiImpl implements AppconfigApi {
       AppConfig insertedAppConfig = configManagerService.savePluginConfig(body, harnessAccount);
       return Response.status(Response.Status.OK).entity(insertedAppConfig).build();
     } catch (DuplicateKeyException e) {
-      String logMessage = format(PLUGIN_CONFIG_ALREADY_PRESENT, body.getAppConfig().getPluginName(), harnessAccount);
+      String logMessage = format(PLUGIN_CONFIG_ALREADY_PRESENT, body.getAppConfig().getPluginId(), harnessAccount);
       return Response.status(Response.Status.INTERNAL_SERVER_ERROR)
           .entity(ResponseMessage.builder().message(logMessage).build())
           .build();
     } catch (Exception e) {
+      log.error(e.getMessage());
       return Response.status(Response.Status.INTERNAL_SERVER_ERROR)
           .entity(ResponseMessage.builder().message(e.getMessage()).build())
           .build();
@@ -62,6 +66,7 @@ public class AppConfigApiImpl implements AppconfigApi {
       AppConfig updatedAppConfig = configManagerService.updatePluginConfig(body, harnessAccount);
       return Response.status(Response.Status.OK).entity(updatedAppConfig).build();
     } catch (Exception e) {
+      log.error(e.getMessage());
       return Response.status(Response.Status.INTERNAL_SERVER_ERROR)
           .entity(ResponseMessage.builder().message(e.getMessage()).build())
           .build();
@@ -69,12 +74,12 @@ public class AppConfigApiImpl implements AppconfigApi {
   }
 
   @Override
-  public Response togglePlginForAccount(String harnessAccount, String pluginName, Boolean isEnabled) {
+  public Response togglePluginForAccount(String harnessAccount, String pluginId, Boolean isEnabled) {
     try {
-      AppConfig disabledPluginAppConfig =
-          configManagerService.updatePluginEnablement(harnessAccount, pluginName, isEnabled);
+      AppConfig disabledPluginAppConfig = configManagerService.togglePlugin(harnessAccount, pluginId, isEnabled);
       return Response.status(Response.Status.OK).entity(disabledPluginAppConfig).build();
     } catch (Exception e) {
+      log.error(e.getMessage());
       return Response.status(Response.Status.INTERNAL_SERVER_ERROR)
           .entity(ResponseMessage.builder().message(e.getMessage()).build())
           .build();
